# KdTree

./: .gitignore  KdTree.cabal  README.md
app/: KdTree.hs  Main.hs
